[package]
name = "lsh-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
indicatif = "0.17.8"
ndarray = {version = "0.16.1", features = ["rayon"]}
ndarray-stats = "0.6.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
rng = "0.1.0"
serde = { version = "1.0.211", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0.140"
simsimd = "5.8.0"
structopt = "0.3.26"

[profile.release]
opt-level = 3 
lto = true 
codegen-units = 1  
debug = true

[profile.release.package."*"]
opt-level = 3 
debug = true
